[package]
name = "stackengine"
version = "0.1.0"
authors = ["R1tschY <r1tschy@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
classfile = { path = "../classfile" }
rustjvm-opcode = { path = "../opcode" }
